Sun Sep 28 21:15:00 1997  Richard Frith-Macdonald  <richard@brainstorm.co.uk>

	* checks/nsdata.m: Added a whole lot of trivial checks.

	* checks/oldserver.h: Added include file for oldserver.m, oldclient.m

	* src/Coder.m: ([-initForWritingWithMutableData:]) added code to
	wrap the NSMutableData object inside a MemoryStream since
	NSMutableData no longer conforms to the MemoryStreaming protocol.
	([-initForReadingWithData:]) added code to wrap the NSData object
	inside a MemoryStream.
	([+unarchiveObjectWithData:]) added code to wrap the NSData object
	inside a MemoryStream.
	([-classForPortCoder:]) changed to [-classForPortCoder] to conform
	to OpenStep spec.

	* src/Makefile.in: Removed NSGData.[hm] and NSHData.[hm]

	* src/MemoryStream.m: Rewritten to use NSData and NSMutableData
	objects to hold the memory.

	* src/NSAttributedString.m: ([-classForPortCoder:]) changed to
	[-classForPortCoder] to conform to OpenStep spec.

	* src/NSData.m: Extensively rewritten to have the OPENSTEP class
	cluster architecture. Should support the full OPENSTEP api and
	have shared memory support and static buffer support as extensions.

	* src/NSDate.m: ([-classForPortCoder:]) changed to [-classForPortCoder]
	to conform to OpenStep spec.

	* src/NSDistantObject.m: ([-classForPortCoder:]) changed to
	[-classForPortCoder] to conform to OpenStep spec.

	* src/NSGArchiver.m: ([-archiverData]) modified to cope with changes
	to NSData and NSMutableData.

	* src/NSGAttributedString.m: ([-classForPortCoder:]) changed to
	[-classForPortCoder] to conform to OpenStep spec.

	* src/NSGCString.m: ([-classForPortCoder:]) changed to
	[-classForPortCoder] to conform to OpenStep spec.

	* src/NSGString.m: ([-classForPortCoder:]) changed to
	[-classForPortCoder] to conform to OpenStep spec.

	* src/NSPortCoder.m: ([-classForPortCoder:]) changed to
	[-classForPortCoder] to conform to OpenStep spec.
	([-isByCopy]) changed to [-isBycopy] to conform to OpenStep.
