@@ -1,3 +1,9 @@
+Tue Sep 30 08:57:44 1997  Adam Fedor  <fedor@doc.com>
+
+	* src/NSData.m: Remove obsolete includes.
+	* src/NSMutableData.m: Remove file.
+	* src/NSSerializer.m: Remove references to obsolete data classes.
+
 Sun Sep 28 21:15:00 1997  Richard Frith-Macdonald  <richard@brainstorm.co.uk>
 
 	* checks/nsdata.m: Added a whole lot of trivial checks.
